--- a/src/app/online-logs/online-logs.component.html
+++ b/src/app/online-logs/online-logs.component.html
@@ -43,7 +43,7 @@
 
       <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
 
-      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" dir="rtl">
+      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" >
 
         <ng-container matColumnDef="tsUtc">
           <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך/שעה (UTC) </mat-header-cell>
