--- a/src/app/chameleon-reports/medication-reconciliation/medication-reconciliation.component.html
+++ b/src/app/chameleon-reports/medication-reconciliation/medication-reconciliation.component.html
@@ -104,42 +104,42 @@
 
           <ng-container matColumnDef="Admission_No">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
-            <td mat-cell *matCellDef="let row">{{ row.Admission_No }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.admission_No }}</td>
           </ng-container>
 
           <ng-container matColumnDef="Admission_Date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך קבלה</th>
-            <td mat-cell *matCellDef="let row">{{ row.Admission_Date | date: 'dd/MM/yyyy' }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.admission_Date | date: 'dd/MM/yyyy' }}</td>
           </ng-container>
 
           <ng-container matColumnDef="UnitName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מחלקה</th>
-            <td mat-cell *matCellDef="let row">{{ row.UnitName }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.unitName }}</td>
           </ng-container>
 
           <ng-container matColumnDef="ComboText_15536">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>בוצעה סקירה והשוואה</th>
-            <td mat-cell *matCellDef="let row">{{ row.ComboText_15536 }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.comboText_15536 }}</td>
           </ng-container>
 
           <ng-container matColumnDef="ComboText_15537">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>POLYPHARMACY</th>
-            <td mat-cell *matCellDef="let row">{{ row.ComboText_15537 }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.comboText_15537 }}</td>
           </ng-container>
 
           <ng-container matColumnDef="UserName_15536">
             <th mat-header-cell *matHeaderCellDef>הוזן ע״י סקירה</th>
-            <td mat-cell *matCellDef="let row">{{ row.UserName_15536 }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.userName_15536 }}</td>
           </ng-container>
 
           <ng-container matColumnDef="UserName_15537">
             <th mat-header-cell *matHeaderCellDef>הוזן ע״י POLYPHARMACY</th>
-            <td mat-cell *matCellDef="let row">{{ row.UserName_15537 }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.userName_15537 }}</td>
           </ng-container>
 
           <ng-container matColumnDef="Consiliums">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>ייעוץ רוקח קליני</th>
-            <td mat-cell *matCellDef="let row">{{ row.Consiliums }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.consiliums }}</td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -157,42 +157,42 @@
 
           <ng-container matColumnDef="Admission_No">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
-            <td mat-cell *matCellDef="let row">{{ row.Admission_No }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.admission_No }}</td>
           </ng-container>
 
           <ng-container matColumnDef="Admission_Date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך קבלה</th>
-            <td mat-cell *matCellDef="let row">{{ row.Admission_Date | date: 'dd/MM/yyyy' }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.admission_Date | date: 'dd/MM/yyyy' }}</td>
           </ng-container>
 
           <ng-container matColumnDef="UnitName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מחלקה</th>
-            <td mat-cell *matCellDef="let row">{{ row.UnitName }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.unitName }}</td>
           </ng-container>
 
           <ng-container matColumnDef="ComboText_15536">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>בוצעה סקירה והשוואה</th>
-            <td mat-cell *matCellDef="let row">{{ row.ComboText_15536 }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.comboText_15536 }}</td>
           </ng-container>
 
           <ng-container matColumnDef="ComboText_15537">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>POLYPHARMACY</th>
-            <td mat-cell *matCellDef="let row">{{ row.ComboText_15537 }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.comboText_15537 }}</td>
           </ng-container>
 
           <ng-container matColumnDef="UserName_15536">
             <th mat-header-cell *matHeaderCellDef>הוזן ע״י סקירה</th>
-            <td mat-cell *matCellDef="let row">{{ row.UserName_15536 }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.userName_15536 }}</td>
           </ng-container>
 
           <ng-container matColumnDef="UserName_15537">
             <th mat-header-cell *matHeaderCellDef>הוזן ע״י POLYPHARMACY</th>
-            <td mat-cell *matCellDef="let row">{{ row.UserName_15537 }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.userName_15537 }}</td>
           </ng-container>
 
           <ng-container matColumnDef="Consiliums">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>ייעוץ רוקח קליני</th>
-            <td mat-cell *matCellDef="let row">{{ row.Consiliums }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.consiliums }}</td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
