--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
@@ -547,7 +547,7 @@ class="custom-toggle-group"
             </ng-container>
   
             <ng-container matColumnDef="result">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Result</th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>result</th>
               <td mat-cell *matCellDef="let element">{{ element.result }}</td>
             </ng-container>
   
@@ -675,7 +675,7 @@ class="custom-toggle-group"
             </ng-container>
   
             <ng-container matColumnDef="question">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Question</th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>question</th>
               <td mat-cell *matCellDef="let element">{{ element.question }}</td>
             </ng-container>
   
@@ -984,12 +984,12 @@ class="custom-toggle-group"
             <th mat-header-cell *matHeaderCellDef mat-sort-header>name</th>
             <td mat-cell *matCellDef="let element">{{ element.name }}</td>
           </ng-container>
-          <!-- <ng-container matColumnDef="Entry_Date">
+          <!-- <ng-container matColumnDef="entry_Date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
               Entry Date
             </th>
             <td mat-cell *matCellDef="let element">
-              {{ element.Entry_Date | date }}
+              {{ element.entry_Date | date }}
             </td>
           </ng-container> -->
           <ng-container matColumnDef="release_Date">
@@ -1048,9 +1048,9 @@ class="custom-toggle-group"
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</th>
             <td mat-cell *matCellDef="let element">{{ element.last_Name }}</td>
           </ng-container>
-          <ng-container matColumnDef="Age_Years">
+          <ng-container matColumnDef="age_Years">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>גיל</th>
-            <td mat-cell *matCellDef="let element">{{ element.Age_Years }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.age_Years }}</td>
           </ng-container>
           <ng-container matColumnDef="count_Above_180_Less_48h">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -1068,9 +1068,9 @@ class="custom-toggle-group"
             <th mat-header-cell *matHeaderCellDef mat-sort-header> מחלקה</th>
             <td mat-cell *matCellDef="let element">{{ element.unitName }}</td>
           </ng-container>
-          <ng-container matColumnDef="LastTestResult">
+          <ng-container matColumnDef="lastTestResult">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> בדיקה אחרונה</th>
-            <td mat-cell *matCellDef="let element">{{ element.LastTestResult }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.lastTestResult }}</td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="sugerAbove180Columns"></tr>
 
@@ -1180,20 +1180,20 @@ class="custom-toggle-group"
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</th>
             <td mat-cell *matCellDef="let element">{{ element.last_Name }}</td>
           </ng-container>
-          <ng-container matColumnDef="Main_Drug">
+          <ng-container matColumnDef="main_Drug">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Main Drug</th>
-            <td mat-cell *matCellDef="let element">{{ element.Main_Drug }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.main_Drug }}</td>
           </ng-container>
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Drug name</th>
             <td mat-cell *matCellDef="let element">{{ element.name }}</td>
           </ng-container>
-          <ng-container matColumnDef="Entry_Date">
+          <ng-container matColumnDef="entry_Date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
               Entry Date
             </th>
             <td mat-cell *matCellDef="let element">
-              {{ element.Entry_Date | date }}
+              {{ element.entry_Date | date }}
             </td>
           </ng-container>
           <ng-container matColumnDef="release_Date">
@@ -1234,22 +1234,22 @@ class="custom-toggle-group"
               {{ element.admission_Date | date }}
             </td>
           </ng-container>
-          <ng-container matColumnDef="TestCode">
+          <ng-container matColumnDef="testCode">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Test Code</th>
-            <td mat-cell *matCellDef="let element">{{ element.TestCode }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.testCode }}</td>
           </ng-container>
-          <ng-container matColumnDef="TestName">
+          <ng-container matColumnDef="testName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Test Name</th>
-            <td mat-cell *matCellDef="let element">{{ element.TestName }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.testName }}</td>
           </ng-container>
-          <ng-container matColumnDef="Result">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Result</th>
-            <td mat-cell *matCellDef="let element">{{ element.Result }}</td>
+          <ng-container matColumnDef="result">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>result</th>
+            <td mat-cell *matCellDef="let element">{{ element.result }}</td>
           </ng-container>
-          <ng-container matColumnDef="TestDate">
+          <ng-container matColumnDef="testDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Test Date</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.TestDate | date }}
+              {{ element.testDate | date }}
             </td>
           </ng-container>
           <ng-container matColumnDef="id_Num">
@@ -1310,9 +1310,9 @@ class="custom-toggle-group"
             </th>
             <td mat-cell *matCellDef="let element">{{ element.first_Name }}</td>
           </ng-container>
-          <ng-container matColumnDef="Age_Years">
+          <ng-container matColumnDef="age_Years">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>גיל</th>
-            <td mat-cell *matCellDef="let element">{{ element.Age_Years }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.age_Years }}</td>
           </ng-container>
           <ng-container matColumnDef="last_Name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -1320,12 +1320,12 @@ class="custom-toggle-group"
             </th>
             <td mat-cell *matCellDef="let element">{{ element.last_Name }}</td>
           </ng-container>
-          <ng-container matColumnDef="Count_Less_70_Less_48h">
+          <ng-container matColumnDef="count_Less_70_Less_48h">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
               Count < 70 (48h)
             </th>
             <td mat-cell *matCellDef="let element">
-              {{ element.Count_Less_70_Less_48h }}
+              {{ element.count_Less_70_Less_48h }}
             </td>
           </ng-container>
           <ng-container matColumnDef="release_Date">
@@ -1376,17 +1376,17 @@ class="custom-toggle-group"
             <td mat-cell *matCellDef="let element">{{ element.unitName }}</td>
           </ng-container>
 
-          <ng-container matColumnDef="Entry_Date">
+          <ng-container matColumnDef="entry_Date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
               Entry Date
             </th>
             <td mat-cell *matCellDef="let element">
-              {{ element.Entry_Date | date }}
+              {{ element.entry_Date | date }}
             </td>
           </ng-container>
-          <ng-container matColumnDef="Question">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Question</th>
-            <td mat-cell *matCellDef="let element">{{ element.Question }}</td>
+          <ng-container matColumnDef="question">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>question</th>
+            <td mat-cell *matCellDef="let element">{{ element.question }}</td>
           </ng-container>
           <ng-container matColumnDef="Diagnosis_Text">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -1639,9 +1639,9 @@ class="custom-toggle-group"
             <td mat-cell *matCellDef="let element">{{ element.DiagnosisName }}</td>
           </ng-container>
       
-          <!-- <ng-container matColumnDef="Entry_Date">
+          <!-- <ng-container matColumnDef="entry_Date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך אבחנה</th>
-            <td mat-cell *matCellDef="let element">{{ element.Entry_Date | date }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.entry_Date | date }}</td>
           </ng-container> -->
       
           <ng-container matColumnDef="Parameter">
